--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "javascript-action",
+  "name": "properties-io",
   "version": "1.0.0",
-  "description": "JavaScript Action Template",
-  "main": "index.js",
-  "scripts": {
-    "lint": "eslint index.js",
-    "package": "ncc build index.js -o dist",
-    "test": "eslint index.js && jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
-  },
+  "description": "Lighthouse Report Action",
   "keywords": [
     "GitHub",
     "Actions",
-    "JavaScript"
+    "JavaScript",
+    "Properties",
+    "File",
+    "Properties File"
   ],
-  "author": "GitHub",
+  "author": "Charles Odili <chaluwa@gmail.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:chalu/properties-io.git"
   },
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "bugs": {
+    "url": "https://github.com/chalu/properties-io/issues"
+  },
+  "homepage": "https://github.com/chalu/properties-io#readme",
+  "scripts": {
+    "package": "ncc build index.js -o dist"
+  },
   "dependencies": {
-    "@actions/core": "^1.1.1"
+    "@actions/core": "^1.2.3",
+    "properties-reader": "^1.0.0"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.20.5",
-    "eslint": "^6.3.0",
-    "jest": "^24.9.0"
+    "@zeit/ncc": "^0.22.1",
+    "eslint": "^6.8.0"
   }
 }
