--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/chalu/properties-io#readme",
   "scripts": {
-    "package": "ncc build index.js -o dist"
+    "package": "ncc build index.js -m -o dist"
   },
   "dependencies": {
     "@actions/core": "^1.2.3",
